# LegionForge

./: .env  .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CREDITS.md  Dockerfile.agent-base  Dockerfile.analyzer  Dockerfile.gateway  Dockerfile.pentest  Dockerfile.sandbox  Dockerfile.testclient  Dockerfile.testlab  LICENSE  LegionForge_index.md  LegionForge_readme.md  Makefile  NEXT.md  NOTICE  PHASE_PLAN.md  PROJECT_STATUS.md  README.md  RESEARCH.md  SECURITY.md  SECURITY_POSTURE.md  TLDR.md  TODO_AUDIT.md  VERIFICATION.md  checkpoint.md  docker-compose.multi-instance.yml  docker-compose.yml  langgraph.json  make-targets.md  placeholder_index.md  (+7 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  smoke.yml  sync-guardian.yml  test-with-pg.yml
config/: roles.yaml  settings.py
config/hardware_profiles/: mac_m4_mini_16gb.yaml  mac_m5_mini_32gb.yaml
config/nginx/: nginx.multi-instance.conf
config/sandbox_profiles/: analyzer.sb
docs/: A2A_CONFORMANCE.md  GUARDIAN_SPINOFF.md  PHASE_8_GATEWAY_SPEC.md  PROJECT_STATUS.md  README.md  SCALING.md  UI_THEMING_PROPOSALS.md  VISION.md  architecture.md  code-review-protocol.md  quick-start.md
docs/archive/: issue-pr-archive.md
docs/post_uat_review/: 01_security.md  02_stability.md  03_efficiency.md  04_testing.md  05_cicd.md  06_uiux.md  07_agent_marketplace.md  README.md
guardian/: Dockerfile  requirements.txt
scripts/: check_mount.sh  com.jpc.check-agent-drive.plist  com.legionforge.check-agent-drive.plist  db_setup_roles.sql  github_setup.sh  restore_structure.sh  run_crystallizer.py  run_observer.py  run_researcher.py  setup_postgres.sh
src/: __init__.py  agent_registry.py  base_graph.py  cost_estimator.py  credentials.py  database.py  health.py  ingestor.py  llm_factory.py  memory.py  observability.py  ollama_cluster.py  pipeline_runner.py  rate_limiter.py  safeguards.py  scheduler.py  security.py  startup.sh  task_cache.py  webhook_sender.py
src/agents/: crystallizer.py  fan_out.py  observer.py  orchestrator.py  pentest_agent.py  pentest_report.py  researcher.py  synthetic_env.py  threat_analyst.py
src/cli/: __init__.py  manage_users.py
src/connectors/: __init__.py  base.py  discord.py  slack.py  telegram.py  webhook.py  whatsapp.py
src/gateway/: __init__.py  app.py  auth.py  events.py  metrics.py  middleware.py  rate_limit_headers.py  state.py  worker.py
src/gateway/backends/: __init__.py  api_key.py  base.py  github.py  kerberos.py  ldap_backend.py  oidc.py  registry.py
src/gateway/migrations/: 001_tasks.sql  002_users.sql
src/gateway/routes/: __init__.py  a2a.py  admin.py  annotations.py  auth_routes.py  documents.py  hitl.py  mcp.py  memory.py  models.py  observability.py  pipelines.py  schedules.py  sessions.py  stream.py  tasks.py  templates.py  webhooks.py
src/gateway/static/: index.html
src/search/: __init__.py  base.py  registry.py
src/search/providers/: __init__.py  brave.py  ddg.py  exa.py  perplexity.py  searxng.py  tavily.py
src/security/: __init__.py  acl.py  bom.py  core.py  guardian.py
src/testlab/: app.py
src/testlab/static/: index.html
src/tools/: __init__.py  browser_tools.py  code_tools.py  crystallization_analyzer.py  file_tools.py  http_tools.py  memory_tools.py  model_integrity.py  pentest_tools.py  signing.py
tests/: agent_queries.yaml  conftest.py  test_integration.py  test_kerberos_integration.py  test_researcher.py  test_smoke.py
tests/crystallization/: conftest.py  test_analyzer.py  test_crystallizer.py  test_hitl_api.py  test_observer.py  test_pipeline_security.py
tests/gateway_client/: __init__.py  __main__.py  client.py  config.py  report.py  suite_agent_quality.py  suite_basic.py  suite_injection.py  suite_load.py  suite_pentest.py
tests/hallucination/: conftest.py  test_live_hallucination.py
tests/testlab_suite/: conftest.py  novel_findings.py  test_auth_attacks.py  test_cve.py  test_data_attacks.py  test_dos.py  test_functional.py  test_novel_llm.py  test_novel_security.py  test_security_attacks.py
tests/tool_accuracy/: conftest.py  test_researcher_accuracy.py  test_web_fetch.py  test_web_fetch_js.py  test_web_search.py
tests/tool_integrity/: conftest.py  test_code_execute_sandbox.py  test_guardian_e2e.py  test_memory_isolation.py  test_result_injection.py  test_schema_conformance.py
tests/ui/: conftest.py  mock_server.py  test_error_states.py  test_history.py  test_page_load.py  test_task_flow.py
