[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legionforge"
version = "0.1.0"
description = "LegionForge — sovereign AI agent platform"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit[toml]",
    "mypy",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.bandit]
# Project-wide skip for B404 only. B603 and B607 are reviewed per-site so each
# call gets a documented attestation that argv is not user-controlled and that
# the target binary is acceptable for its execution environment. Reviewed and
# approved: jp@legionforge.org 2026-06-16.
#
#   B404 (import subprocess) — importing is not the vulnerability; how you use
#     subprocess is. The real risks (shell=True, untrusted input) are covered by
#     B602–B605, which we leave enabled. Per-instance nosec at every import
#     site would be uninformative.
targets = ["src"]
skips = ["B404"]
