[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legionforge"
version = "0.1.0"
description = "LegionForge — sovereign AI agent platform"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "bandit[toml]",
    "mypy",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.bandit]
# Project-wide skip for B404 only. B603 and B607 are reviewed per-site so each
# call gets a documented attestation that argv is not user-controlled and that
# the target binary is acceptable for its execution environment. Reviewed and
# approved: jp@legionforge.org 2026-06-16.
#
#   B404 (import subprocess) — importing is not the vulnerability; how you use
#     subprocess is. The real risks (shell=True, untrusted input) are covered by
#     B602–B605, which we leave enabled. Per-instance nosec at every import
#     site would be uninformative.
targets = ["src"]
skips = ["B404"]

[tool.mypy]
# Pragmatic baseline (issue #29 mypy slice).
#
# The codebase inherited ~335 type errors from LangGraph 1.x, LangChain
# 1.x, and psycopg 3.x stub-tightening. None flag real bugs — each is
# an interface-drift mismatch. A full pass through agents/, gateway/,
# and database.py would take days. Instead we enable the broadly useful
# checks (name resolution, missing imports, basic annotations) and
# selectively silence the categories that fire on upstream drift.
#
# Per-module overrides below relax the heaviest offenders. As modules
# get cleaned up, prune their entries. Follow-up: a dedicated issue to
# tighten one module at a time after #29 closes.
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
warn_redundant_casts = false

[[tool.mypy.overrides]]
# LangGraph / LangChain / psycopg integration boundary. Type drift here
# is upstream stub-tightening; runtime is covered by 2255 smoke tests +
# 41 integration tests, not by mypy.
module = [
    "src.database",
    "src.base_graph",
    "src.agents.*",
    "src.gateway.*",
    "src.security.*",
    "src.connectors.*",
    "src.tools.*",
    "src.search.*",
    "src.testlab.*",
    "src.llm_factory",
    "src.memory",
    "src.health",
    "src.observability",
    "src.rate_limiter",
    "src.ingestor",
    "src.cost_estimator",
]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "dict-item",
    "index",
    "misc",
    "operator",
    "return-value",
    "typeddict-item",
    "union-attr",
]
